test(moviehub): 重构 MovieMapper 和 MovieTypeMapper 的单元测试- 引入 MybatisPlusTest 注解替代 SpringBootTest - 优化测试方法结构，提高可读性和可维护性 - 更新 MovieMapperTest，增加对 selectList 方法的测试 - 修复 MovieTypeMapperTest 中的断言错误